--- a/choices.html
+++ b/choices.html
@@ -13,12 +13,16 @@
         <h2>What is your desired Input and Output?</h2>
         <div class="btn-container">
             <div class="button-row">
-                <button id="textTOtext">TEXT to TEXT</button>
-                <button id="speechTOspeech">SPEECH to SPEECH</button>
+                <button id="textTOtext"><a href="usertext1.html">TEXT to TEXT</a></button>
+                <button id="speechTOspeech"><a href="speechTOspeech.html">SPEECH to SPEECH</a></button>
             </div>
             <div class="button-row">
-                <button id="speechTOtext">SPEECH to TEXT</button>
-                <button id="textTOspeech">TEXT to SPEECH</button>
+                <button id="speechTOtext"><a href="userspeech1.html">SPEECH to TEXT</a></button>
+                <button id="textTOspeech"><a href="textTOspeech.html">TEXT TO SPEECH</a></button>
+            </div>
+            <div class="button-row">
+                <button id="signTOtext"><a href="signTOtext.html">SIGN LANGUAGE TO TEXT</a></button>
+                <button id="signTOspeech"><a href="textTOspeech.html">SIGN LANGUAGE TO SPEECH</a></button>
             </div>
         </div>
     </div>
