--- a/userspeech1.html
+++ b/userspeech1.html
@@ -16,16 +16,16 @@
             <img src="outputlogo.jpg" alt="Your Logo">
         </div>
         <div class="buttons">
-            <button id="homeBtn"><a href="index.html">HOME</a></button>
+            <button id="homeBtn"><a href="choices.html">CHOICES</a></button>
             <button id="openModalButton">EXIT</button>
         </div>
     </div>
-    <div class="container">
-        <button id="startButton">Start Listening</button>
-        <p>Spoken Text:</p>
-        <label id="spokenText"></label>
-        <p>Chat:</p>
-        <label id="chatchat"></label>
+
+    <div class="centered-container" style="display: flex; justify-content: center; align-items: center; height: 80vh;">
+        <div class="container">
+            <p>Chat:</p>
+            <label id="chatchat"></label>
+        </div>
     </div>
 
     <!-- MODAL WHEN EXIT IS PRESSED -->
@@ -44,62 +44,32 @@
     <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-database.js"></script>
 
     <script>
-        const startButton = document.getElementById("startButton");
-        const spokenText = document.getElementById("spokenText");
-                // Initialize Firebase
-                const firebaseConfig = {
-                    apiKey: "AIzaSyA5GAprlsMs8y5K1Zs5o9dU4Yf1IXI6SDU",
-                    authDomain: "sign-language-321a6.firebaseapp.com",
-                    databaseURL: "https://sign-language-321a6-default-rtdb.firebaseio.com",
-                    projectId: "sign-language-321a6",
-                    storageBucket: "sign-language-321a6.appspot.com",
-                    messagingSenderId: "1055103413451",
-                    appId: "1:1055103413451:web:72ef9f70e5f751684b3f4e",
-                    measurementId: "G-B07XWE015G"
-                };
-                firebase.initializeApp(firebaseConfig);
-        if ('webkitSpeechRecognition' in window) {
-            const recognition = new webkitSpeechRecognition();
+        // Initialize Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyA5GAprlsMs8y5K1Zs5o9dU4Yf1IXI6SDU",
+            authDomain: "sign-language-321a6.firebaseapp.com",
+            databaseURL: "https://sign-language-321a6-default-rtdb.firebaseio.com",
+            projectId: "sign-language-321a6",
+            storageBucket: "sign-language-321a6.appspot.com",
+            messagingSenderId: "1055103413451",
+            appId: "1:1055103413451:web:72ef9f70e5f751684b3f4e",
+            measurementId: "G-B07XWE015G"
+        };
+        firebase.initializeApp(firebaseConfig);
 
-            recognition.continuous = false;
-            recognition.interimResults = false;
-            recognition.lang = 'en-US'; // Set the language to your desired language
+        const database = firebase.database();
+        const chatRef = database.ref("speech_recognition/audio/text_output");
 
-            startButton.addEventListener('click', function () {
-                recognition.start();
-                startButton.innerHTML = 'Listening...';
-            });
+        const chatchatLabel = document.getElementById("chatchat");
 
-            recognition.onresult = function (event) {
-                const result = event.results[0][0].transcript;
-                spokenText.textContent = result;
-                startButton.innerHTML = 'Start Listening';
-
-
-
-                // Get a reference to the Firebase database
-                const database = firebase.database();
-                const ref = database.ref('speech1_value/chat');
-
-                // Push the result to Firebase
-                ref.set(result);
-
-                const dataRef = database.ref("speech2_value/chat/");
-                const labelElement = document.getElementById("chatchat");
-                dataRef.on("value", (snapshot) => {
-                    const chatData = snapshot.val();
-                    if (chatData) {
-                        labelElement.textContent = chatData;
-                    } else {
-                        labelElement.textContent = "No chat data available";
-                    }
-                });
-            };
-
-        } else {
-            startButton.style.display = 'none';
-            spokenText.textContent = 'Speech recognition is not supported in your browser.';
-        }
+        chatRef.on("value", (snapshot) => {
+            const chatData = snapshot.val();
+            if (chatData) {
+                chatchatLabel.textContent = chatData;
+            } else {
+                chatchatLabel.textContent = "No chat data available";
+            }
+        });
     </script>
 
     <script>
